# proyecto_3_Server

./: CMakeLists.txt  Control.cpp  Control.h  Data.cpp  Data.h  Singleton.cpp  Singleton.h  Tolerancia.h  Video.cpp  Video.h  main.cpp
Listas/: LinkedList.h  Node.h
